fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 .grid {
   display: grid;
   max-width: 1185px;
-  grid-template-columns: repeat(auto-fill, 395px);
+  grid-template-columns: repeat(auto-fill, 374px);
   justify-items: center;
   align-items: center;
 }
